2004-11-15  Gabor Loki  <loki@gcc.gnu.org>

	Open cfo-branch
	* Makefile.in: Added fact-common.o, rtl-fact.o, tree-ssa-lfact.o,
	seqabstr.o
	* fact-common.c, fact-common.h: New files. Common interface.
	* rtl-lfact.c, tree-ssa-lfact.c : New files. Local factoring.
	* seqabstr.c: New file. Sequence abstraction.
	* cfgcleanup.c (outgoing_edges_match): Extra checks.
	* passes.c (rest_of_handle_seqabstr, rest_of_factoring): New functions.
	(rest_of_compilation): New passes.
	* common.opt, tree.h: New options.
	* timevar.def: Same.
	* tree-dump.c: Same.
	* tree-optimize.c, tree-pass.h: New passes.
	* opts.c (decode_options): Set factoring flags as default for -Os

2004-11-14  Richard Henderson  <rth@redhat.com>

	PR 18480
	* calls.c (struct arg_data): Add parallel_value.
	(precompute_register_parameters): Set it.
	(load_register_parameters): Use it.
	(store_one_arg): Also set it here.

2004-11-14  Zdenek Dvorak  <dvorakz@suse.cz>

	PR tree-optimization/18431
	* fold-const.c (associate_trees): Do not produce x + 0.
	(fold_widened_comparison, fold_sign_changed_comparison): New functions.
	(fold): Use them.
	* tree-ssa-loop-niter.c (upper_bound_in_type, lower_bound_in_type):
	Moved ...
	* tree.c (upper_bound_in_type, lower_bound_in_type): Here.
	* tree.h (upper_bound_in_type, lower_bound_in_type): Declare.

2004-11-14  Eric Botcazou <ebotcazou@libertysurf.fr>

	* doc/rtl.texi (SUBREG): Adjust BYTENUM value in example.

2004-11-14  Kazu Hirata  <kazu@cs.umass.edu>

	* cfgrtl.c, global.c, tree-ssa-copy.c, tree-ssa-loop-ivopts.c,
	value-prof.c: Fix comment typos.

2004-11-14  Stan Shebs  <shebs@apple.com>

	Basic ABI changes for passing structs by value in 64-bit Darwin.
	* config/rs6000/rs6000.c (rs6000_darwin64_abi): New flag.
	(rs6000_override_options): Set it for 64-bit Darwin.
	(rs6000_parse_abi_options): Add testing options to change it.
	(rs6000_return_in_memory): Test whether the type is one
	that can be passed in registers.
	(darwin64_function_arg_advance): New.